--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,23 @@
 body {
     background-color: black !important;
+    background-image: url("https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-259725.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: auto;
+}
+
+.container-fluid {
+    color: white;
 }
 
 
 /* HEADERS */
 
 .title {
+    text-align: center;
+}
+
+#reset {
     text-align: center;
 }
 
@@ -17,7 +29,7 @@ body {
     transition: 0.3s;
     width: 100%;
     height: 100%;
-
+    color: black;
     background-color: white;
 }
 
