--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container-fluid {
-    color: white;
+    color: #eee;
 }
 
 
@@ -29,8 +29,9 @@ body {
     transition: 0.3s;
     width: 100%;
     height: 100%;
-    color: black;
+    color: #ddd;
     background-color: white;
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/dark-triangles.png");
 }
 
 .card:hover {
@@ -61,4 +62,74 @@ img {
 #benchOp1,
 #benchOp2 {
     width: 100%;
+}
+
+/*TEXT COLORS*/
+.blueColor {
+  text-shadow: 
+    2px 2px 1px rgba(0,0,0,.4),
+    0 0 20px #519cff,
+    0 0 40px rgba(0, 110, 255, .75),
+    0 0 50px rgba(0, 110, 255, .75),
+    0 0 100px rgba(0, 110, 255, .75);
+}
+.blueColor:before{
+  content:'';
+  background: rgba(81, 156, 255, .25);
+  z-index: -1;
+  opacity: .7;
+  filter: blur(50px);
+  width: 100%;
+  height: 100%;
+}
+.purpleColor {
+  text-shadow: 
+    2px 2px 1px rgba(0,0,0,.4),
+    0 0 20px #bb56ff,
+    0 0 40px rgba(152, 0, 255, .75),
+    0 0 50px rgba(152, 0, 255, .75),
+    0 0 100px rgba(152, 0, 255, .75);
+}
+.purpleColor:before{
+  content:'';
+  background: rgba(187, 86, 255, .25);
+  z-index: -1;
+  opacity: .7;
+  filter: blur(50px);
+  width: 100%;
+  height: 100%;
+}
+.redColor {
+  text-shadow: 
+    2px 2px 1px rgba(0,0,0,.4),
+    0 0 20px #ff4f4f,
+    0 0 40px rgba(255, 0, 0, .75),
+    0 0 50px rgba(255, 0, 0, .75),
+    0 0 100px rgba(255, 0, 0, .75);
+}
+.redColor:before{
+  content:'';
+  background: rgba(255, 79, 79, .25);
+  z-index: -1;
+  opacity: .7;
+  filter: blur(50px);
+  width: 100%;
+  height: 100%;
+}
+.greenColor {
+  text-shadow: 
+    2px 2px 1px rgba(0,0,0,.4),
+    0 0 20px #42ff52,
+    0 0 40px rgba(0, 255, 21, .75),
+    0 0 50px rgba(0, 255, 21, .75),
+    0 0 100px rgba(0, 255, 21, .75);
+}
+.greenColor:before{
+  content:'';
+  background: rgba(66, 255, 82, .25);
+  z-index: -1;
+  opacity: .7;
+  filter: blur(50px);
+  width: 100%;
+  height: 100%;
 }
