--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black !important;
-    background-image: url("https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-259725.jpg");
+    background-image: url("../images/GameBackground.png");
     background-repeat: no-repeat;
     background-size: cover;
     overflow: auto;
@@ -31,7 +31,7 @@ body {
     height: 100%;
     color: #ddd;
     background-color: white;
-    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/dark-triangles.png");
+    background-image: url("../images/CardBackgrounds.png");
 }
 
 .card:hover {
